# nopolitics

./: Cargo.toml
input/y2016/day03/: example.txt
src/: main.rs
src/lib/: benchmark.rs  lib.rs  parse.rs  types.rs
src/xx/: mod.rs
src/y2016/: day01.rs  day02.rs  day03.rs  day04.rs  day14.rs
src/y2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day17.rs  day21.rs
src/y2023/: day01.rs  day02.rs  day03.rs  day04.rs
