[package]
name = "nopolitics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc"
path = "src/main.rs"

[lib]
name = "nopolitics"
path = "src/lib/lib.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
num-traits = "0.2.17"
derive_more = "0.99.17"
regex = "1.10.2"
